--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 asyncio_mode = auto
-python_paths = . src
+python_paths = app/
 norecursedirs = env/*
 addopts = -vv -p no:cacheprovider --disable-warnings
 testpaths = tests/
